--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -8,4 +8,8 @@
   -->
 
   <pre>this.data = {{ data | json }}</pre>
+
+  <br /><br /><br /><br /><br />
+
+  <test-calculator></test-calculator>
 </div>
