added bootstrap + path loc strat

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,5 +1,6 @@
 <div>
 
+  <!--
   <ul>
     <li router-active>
       <a [routerLink]=" ['Index'] ">Index</a>
@@ -11,5 +12,8 @@
       <a [routerLink]=" ['About'] ">About</a>
     </li>
   </ul>
+  -->
+
+  <router-outlet></router-outlet>
 
 </div>
