--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,45 +1,68 @@
 <div class="container" style="margin-top:30px">
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
-      <div class="panel-heading"><h3 class="panel-title"><strong>Sign in</strong></h3>
+      <div class="panel-heading"><h3 class="panel-title"><strong>Login</strong></h3>
         <div style="float:right; font-size: 80%; position: relative; top:-15px">
-          <a [routerLink]=" ['ForgotPassword']">Forgot password?</a>
+          <a [routerLink]=" ['/ForgotPassword']">Forgot password?</a>
         </div>
       </div>
 
       <div class="panel-body">
-        <form role="form">
-          <div class="alert alert-danger">
-            <a class="close" data-dismiss="alert" href="#">×</a>Incorrect Email/ or Password!
-          </div>
-          <div style="margin-bottom: 12px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-            <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="email">
+
+        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)">
+
+          <div class="alert alert-danger" *ngIf="false">
+            Incorrect email or password!
           </div>
 
-          <div style="margin-bottom: 12px" class="input-group">
-            <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-            <input id="login-password" type="password" class="form-control" name="password" placeholder="password">
-          </div>
-
-          <div class="input-group">
-            <div class="checkbox" style="margin-top: 0px;">
-              <label>
-                <input id="login-remember" type="checkbox" name="remember" value="1"> Remember me
-              </label>
+          <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.email.valid )}">
+            <div class="input-group">
+              <label class="input-group-addon" for="login-email"><i class="glyphicon glyphicon-envelope"></i></label>
+              <input id="login-email" type="text" class="form-control" name="login-email"
+                     placeholder="Your email"
+                     required
+                     ngControl="email">
             </div>
+
+            <div class="error-group" *ngIf="( submitted && !form.controls.email.valid )">
+              <span class="help-block" *ngIf="form.controls.email.hasError('required')">
+                Your email is required
+              </span>
+              <span class="help-block" *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('invalidEmail')">
+                Your email is invalid
+              </span>
+            </div>
+
           </div>
 
-          <button type="submit" class="btn btn-success">Sign in</button>
+          <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.password.valid )}">
 
-          <hr style="margin-top:10px;margin-bottom:10px;" >
+            <div class="input-group">
+              <label class="input-group-addon" for="login-password"><i class="glyphicon glyphicon-lock"></i></label>
+              <input id="login-password" type="password" class="form-control" name="login-password"
+                     placeholder="Your password"
+                     required
+                     ngControl="password">
+            </div>
+
+            <div class="error-group" *ngIf="( submitted && !form.controls.password.valid )">
+              <span class="help-block" *ngIf="form.controls.password.hasError('required')">
+                Your password is required
+              </span>
+            </div>
+
+          </div>
+
+          <button type="submit" class="btn btn-success">Login</button>
+
+          <hr style="margin-top:10px;margin-bottom:10px;">
 
           <div class="form-group" style="margin-bottom:0;">
 
             <div style="font-size:85%">
-              Don't have an account!
-              <a [routerLink]=" ['Register']" onClick="$('#loginbox').hide(); $('#signupbox').show()">
-                Sign Up Here
+              Don't have an account?
+              <a [routerLink]=" ['/Register']">
+                Register here
               </a>
             </div>
 
