--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -1,3 +1,118 @@
-<div>
-  <p>login</p>
+<div class="container" style="margin-top:30px">
+  <div class="col-md-4 col-md-offset-4">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h3 class="panel-title"><strong>Register</strong></h3>
+        <div style="float:right; font-size: 80%; position: relative; top:-15px">
+          <a [routerLink]=" ['/ForgotPassword']">Forgot password?</a>
+        </div>
+      </div>
+
+      <div class="panel-body">
+
+        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)">
+
+          <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.name.valid )}">
+
+            <div class="input-group">
+              <label class="input-group-addon" for="register-name"><i class="glyphicon glyphicon-user"></i></label>
+              <input id="register-name" type="text" class="form-control" name="name" placeholder="Your name"
+                     required
+                     ngControl="name">
+            </div>
+
+            <div class="error-group" *ngIf="( submitted && !form.controls.name.valid )">
+              <span class="help-block" *ngIf="form.controls.name.hasError('required')">
+                Your name is required
+              </span>
+            </div>
+
+          </div>
+
+          <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.email.valid )}">
+
+            <div class="input-group">
+              <label class="input-group-addon" for="register-email"><i class="glyphicon glyphicon-envelope"></i></label>
+              <input id="register-email" type="text" class="form-control" name="email"
+                     placeholder="Your email"
+                     required
+                     ngControl="email">
+            </div>
+
+            <div class="error-group" *ngIf="( submitted && !form.controls.email.valid )">
+             <span class="help-block" *ngIf="form.controls.email.hasError('required')">
+                Your email is required
+              </span>
+              <span class="help-block"
+                    *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('invalidEmail')">
+                Your email is invalid
+              </span>
+            </div>
+
+          </div>
+
+          <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.password.valid )}">
+
+            <div class="input-group">
+              <label class="input-group-addon" for="register-password"><i class="glyphicon glyphicon-lock"></i></label>
+              <input id="register-password" type="password" class="form-control" name="password"
+                     placeholder="Your password"
+                     required
+                     ngControl="password">
+            </div>
+
+            <div class="error-group" *ngIf="( submitted && !form.controls.password.valid )">
+              <span class="help-block" *ngIf="form.controls.password.hasError('required')">
+                Your password is required
+              </span>
+              <span class="help-block" *ngIf="form.controls.password.hasError('minlength')">
+                Your password is too short (min 7 characters)
+              </span>
+            </div>
+
+          </div>
+
+          <div class="form-group"
+               [ngClass]="{'has-error': ( submitted && ( !form.controls.repeatPassword.valid || form.hasError('passwordMismatch') ) )}">
+
+            <div class="input-group">
+              <label class="input-group-addon" for="register-repeat-password"><i
+                class="glyphicon glyphicon-lock"></i></label>
+              <input id="register-repeat-password" type="password" class="form-control" name="password"
+                     placeholder="Repeat your password"
+                     required
+                     ngControl="repeatPassword">
+            </div>
+
+            <div class="error-group"
+                 *ngIf="( submitted && ( !form.controls.repeatPassword.valid || form.hasError('passwordMismatch') ) )">
+              <span class="help-block" *ngIf="form.controls.repeatPassword.hasError('required')">
+                Repeating your password is required
+              </span>
+              <span class="help-block"
+                    *ngIf="form.controls.repeatPassword.valid && form.hasError('passwordMismatch')">
+                Your chosen password does not match
+              </span>
+            </div>
+
+          </div>
+
+          <button type="submit" class="btn btn-success">Register</button>
+
+          <hr style="margin-top:10px;margin-bottom:10px;">
+
+          <div class="form-group" style="margin-bottom:0;">
+
+            <div style="font-size:85%">
+              Already have an account?
+              <a [routerLink]=" ['/Login']">
+                Login Here
+              </a>
+            </div>
+
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
