--- a/src/app/set-new-password/setNewPassword.html
+++ b/src/app/set-new-password/setNewPassword.html
@@ -1,3 +1,90 @@
-<div>
-  <p>login</p>
+<div class="container" style="margin-top:30px">
+  <div class="col-md-4 col-md-offset-4">
+    <div class="panel panel-default">
+      <div class="panel-heading"><h3 class="panel-title"><strong>Set new password</strong></h3>
+        <div style="float:right; font-size: 80%; position: relative; top:-15px">
+          <a [routerLink]=" ['Login']">Login?</a>
+        </div>
+      </div>
+
+      <div class="panel-body">
+
+        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)">
+
+          <div class="alert alert-danger" *ngIf="!validRequest" style="margin-bottom:0;">
+            Invalid request
+          </div>
+
+          <div *ngIf="validRequest">
+
+            <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.password.valid )}">
+
+              <div class="input-group">
+                <label class="input-group-addon" for="setnewpassword-password">
+                  <i class="glyphicon glyphicon-lock"></i>
+                </label>
+                <input id="setnewpassword-password" type="password" class="form-control" name="password"
+                       placeholder="Your new password"
+                       required
+                       ngControl="password">
+              </div>
+
+              <div class="error-group" *ngIf="( submitted && !form.controls.password.valid )">
+              <span class="help-block" *ngIf="form.controls.password.hasError('required')">
+                Your new password is required
+              </span>
+              <span class="help-block" *ngIf="form.controls.password.hasError('minlength')">
+                Your new password is too short (min 7 characters)
+              </span>
+              </div>
+
+            </div>
+
+            <div class="form-group"
+                 [ngClass]="{'has-error': ( submitted && ( !form.controls.repeatPassword.valid || form.hasError('passwordMismatch') ) )}">
+
+              <div class="input-group">
+                <label class="input-group-addon" for="setnewpassword-repeat-password">
+                  <i class="glyphicon glyphicon-lock"></i>
+                </label>
+                <input id="setnewpassword-repeat-password" type="password" class="form-control" name="repeatPassword"
+                       placeholder="Repeat your new password"
+                       required
+                       ngControl="repeatPassword">
+              </div>
+
+              <div class="error-group"
+                   *ngIf="( submitted && ( !form.controls.repeatPassword.valid || form.hasError('passwordMismatch') ) )">
+              <span class="help-block" *ngIf="form.controls.repeatPassword.hasError('required')">
+                Repeating your new password is required
+              </span>
+              <span class="help-block"
+                    *ngIf="form.controls.repeatPassword.valid && form.hasError('passwordMismatch')">
+                Your new chosen password does not match
+              </span>
+              </div>
+
+            </div>
+
+            <button type="submit" class="btn btn-success">Set new password</button>
+
+          </div>
+
+          <hr style="margin-top:10px;margin-bottom:10px;">
+
+          <div class="form-group" style="margin-bottom:0;">
+
+            <div style="font-size:85%">
+              Don't have an account?
+              <a [routerLink]=" ['/Register']">
+                Register here
+              </a>
+            </div>
+
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
