--- a/src/app/forgot-password/forgotPassword.html
+++ b/src/app/forgot-password/forgotPassword.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top:30px">
+<div class="container" id="forgot-password-container">
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
       <div class="panel-heading"><h3 class="panel-title"><strong>Forgot password</strong></h3>
