--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top:30px">
+<div class="container" id="login-container">
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
       <div class="panel-heading"><h3 class="panel-title"><strong>Login</strong></h3>
@@ -9,7 +9,7 @@
 
       <div class="panel-body">
 
-        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)">
+        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)" id="login-form">
 
           <div class="alert alert-danger" *ngIf="false">
             Incorrect email or password!
