--- a/src/app/set-new-password/setNewPassword.html
+++ b/src/app/set-new-password/setNewPassword.html
@@ -1,4 +1,4 @@
-<div class="container" style="margin-top:30px">
+<div class="container" id="set-new-password-container">
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
       <div class="panel-heading"><h3 class="panel-title"><strong>Set new password</strong></h3>
