--- a/src/app/set-new-password/setNewPassword.html
+++ b/src/app/set-new-password/setNewPassword.html
@@ -9,7 +9,7 @@
 
       <div class="panel-body">
 
-        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)">
+        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)" id="set-new-password-form">
 
           <div class="alert alert-danger" *ngIf="!validRequest" style="margin-bottom:0;">
             Invalid request
