--- a/src/app/forgot-password/forgotPassword.html
+++ b/src/app/forgot-password/forgotPassword.html
@@ -8,7 +8,7 @@
       </div>
 
       <div class="panel-body">
-        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)">
+        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)" id="forgot-password-form">
 
           <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.email.valid )}">
 
