updated page objects / styles hr

--- a/src/app/forgot-password/forgotPassword.html
+++ b/src/app/forgot-password/forgotPassword.html
@@ -14,7 +14,7 @@
 
             <div class="input-group">
               <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-              <input id="login-username" type="text" class="form-control" name="username" value=""
+              <input id="forgot-password-email" type="text" class="form-control" name="email" value=""
                      placeholder="Your email"
                      required
                      ngControl="email">
@@ -33,7 +33,7 @@
 
           <button type="submit" class="btn btn-success">Request new password</button>
 
-          <hr style="margin-top:10px;margin-bottom:10px;">
+          <hr />
 
           <div class="form-group" style="margin-bottom:0;">
 
