--- a/src/app/forgot-password/forgotPassword.html
+++ b/src/app/forgot-password/forgotPassword.html
@@ -24,7 +24,8 @@
               <span class="help-block" *ngIf="form.controls.email.hasError('required')">
                 Your email is required
               </span>
-              <span class="help-block" *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('invalidEmail')">
+              <span class="help-block"
+                    *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('invalidEmail')">
                 Your email is invalid
               </span>
             </div>
@@ -33,7 +34,7 @@
 
           <button type="submit" class="btn btn-success">Request new password</button>
 
-          <hr />
+          <hr/>
 
           <div class="form-group" style="margin-bottom:0;">
 
