--- a/src/app/set-new-password/setNewPassword.html
+++ b/src/app/set-new-password/setNewPassword.html
@@ -70,11 +70,11 @@
 
           </div>
 
-          <hr />
+          <hr/>
 
-          <div class="form-group" style="margin-bottom:0;">
+          <div class="form-group">
 
-            <div style="font-size:85%">
+            <div>
               Don't have an account?
               <a [routerLink]=" ['/Register']">
                 Register here
