--- a/src/app/login/login.html
+++ b/src/app/login/login.html
@@ -57,9 +57,9 @@
 
           <hr />
 
-          <div class="form-group" style="margin-bottom:0;">
+          <div class="form-group">
 
-            <div style="font-size:85%">
+            <div>
               Don't have an account?
               <a [routerLink]=" ['/Register']">
                 Register here
