--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -100,9 +100,9 @@
 
           <hr />
 
-          <div class="form-group" style="margin-bottom:0;">
+          <div class="form-group">
 
-            <div style="font-size:85%">
+            <div>
               Already have an account?
               <a [routerLink]=" ['/Login']">
                 Login Here
