updated templates + pageObjects + tests

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -5,6 +5,16 @@ hr {
   }
 }
 
+.panel-heading {
+  & > div {
+    float:right;
+    font:{
+      size: 80%;
+    }
+    position: relative;
+    top:-15px
+  }
+}
 .container{
   margin:{
     top:50px;
