--- a/src/app/forgot-password/forgotPassword.html
+++ b/src/app/forgot-password/forgotPassword.html
@@ -1,9 +1,10 @@
 <div class="container" id="forgot-password-container">
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
-      <div class="panel-heading"><h3 class="panel-title"><strong>Forgot password</strong></h3>
-        <div style="float:right; font-size: 80%; position: relative; top:-15px">
-          <a [routerLink]=" ['/Login']">Login?</a>
+      <div class="panel-heading">
+        <h3 class="panel-title"><strong>Forgot password</strong></h3>
+        <div>
+          <a [routerLink]=" ['/Login']" id="forgot-password-login-link">Login?</a>
         </div>
       </div>
 
@@ -39,8 +40,8 @@
           <div class="form-group" style="margin-bottom:0;">
 
             <div style="font-size:85%">
-              Don't have an account!
-              <a [routerLink]=" ['/Register']">
+              Don't have an account?
+              <a [routerLink]=" ['/Register']" id="forgot-password-register-link">
                 Register here
               </a>
             </div>
