--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -1,9 +1,10 @@
 <div class="container" id="register-container">
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
-      <div class="panel-heading"><h3 class="panel-title"><strong>Register</strong></h3>
-        <div style="float:right; font-size: 80%; position: relative; top:-15px">
-          <a [routerLink]=" ['/ForgotPassword']">Forgot password?</a>
+      <div class="panel-heading">
+        <h3 class="panel-title"><strong>Register</strong></h3>
+        <div>
+          <a [routerLink]=" ['/ForgotPassword']" id="register-forgot-password-link">Forgot password?</a>
         </div>
       </div>
 
@@ -104,7 +105,7 @@
 
             <div>
               Already have an account?
-              <a [routerLink]=" ['/Login']">
+              <a [routerLink]=" ['/Login']" id="register-login-link">
                 Login Here
               </a>
             </div>
