--- a/src/app/set-new-password/setNewPassword.html
+++ b/src/app/set-new-password/setNewPassword.html
@@ -1,9 +1,10 @@
 <div class="container" id="set-new-password-container">
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
-      <div class="panel-heading"><h3 class="panel-title"><strong>Set new password</strong></h3>
-        <div style="float:right; font-size: 80%; position: relative; top:-15px">
-          <a [routerLink]=" ['Login']">Login?</a>
+      <div class="panel-heading">
+        <h3 class="panel-title"><strong>Set new password</strong></h3>
+        <div>
+          <a [routerLink]=" ['Login']" id="set-new-password-login-link">Login?</a>
         </div>
       </div>
 
@@ -76,7 +77,7 @@
 
             <div>
               Don't have an account?
-              <a [routerLink]=" ['/Register']">
+              <a [routerLink]=" ['/Register']" id="set-new-password-register-link">
                 Register here
               </a>
             </div>
