--- a/src/app/forgot-password/forgotPassword.html
+++ b/src/app/forgot-password/forgotPassword.html
@@ -33,7 +33,7 @@
 
           </div>
 
-          <button type="submit" class="btn btn-success">Request new password</button>
+          <button type="submit" class="btn btn-success" id="forgot-password-submit">Request new password</button>
 
           <hr/>
 
