--- a/src/app/register/register.html
+++ b/src/app/register/register.html
@@ -97,7 +97,7 @@
 
           </div>
 
-          <button type="submit" class="btn btn-success">Register</button>
+          <button type="submit" class="btn btn-success" id="register-submit">Register</button>
 
           <hr />
 
