latest update - set new password test not fully working yet

--- a/src/app/set-new-password/setNewPassword.html
+++ b/src/app/set-new-password/setNewPassword.html
@@ -21,10 +21,10 @@
             <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.password.valid )}">
 
               <div class="input-group">
-                <label class="input-group-addon" for="setnewpassword-password">
+                <label class="input-group-addon" for="set-new-password-password">
                   <i class="glyphicon glyphicon-lock"></i>
                 </label>
-                <input id="setnewpassword-password" type="password" class="form-control" name="password"
+                <input id="set-new-password-password" type="password" class="form-control" name="password"
                        placeholder="Your new password"
                        required
                        ngControl="password">
@@ -45,10 +45,10 @@
                  [ngClass]="{'has-error': ( submitted && ( !form.controls.repeatPassword.valid || form.hasError('passwordMismatch') ) )}">
 
               <div class="input-group">
-                <label class="input-group-addon" for="setnewpassword-repeat-password">
+                <label class="input-group-addon" for="set-new-password-repeat-password">
                   <i class="glyphicon glyphicon-lock"></i>
                 </label>
-                <input id="setnewpassword-repeat-password" type="password" class="form-control" name="repeatPassword"
+                <input id="set-new-password-repeat-password" type="password" class="form-control" name="repeatPassword"
                        placeholder="Repeat your new password"
                        required
                        ngControl="repeatPassword">
@@ -67,7 +67,7 @@
 
             </div>
 
-            <button type="submit" class="btn btn-success">Set new password</button>
+            <button type="submit" class="btn btn-success" id="set-new-password-submit">Set new password</button>
 
           </div>
 
