added success state forgot password

--- a/src/app/forgot-password/forgotPassword.html
+++ b/src/app/forgot-password/forgotPassword.html
@@ -9,7 +9,8 @@
       </div>
 
       <div class="panel-body">
-        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)" id="forgot-password-form">
+        <form role="form" novalidate id="forgot-password-form"
+              [ngFormModel]="form" (submit)="submit($event)" *ngIf="!validSubmit">
 
           <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.email.valid )}">
 
@@ -48,6 +49,14 @@
 
           </div>
         </form>
+        <div id=""
+             *ngIf="validSubmit">
+
+          <div class="alert alert-success">
+            Email with further instructions send!
+          </div>
+
+        </div>
       </div>
     </div>
   </div>
