added success state set new password

--- a/src/app/set-new-password/setNewPassword.html
+++ b/src/app/set-new-password/setNewPassword.html
@@ -10,7 +10,8 @@
 
       <div class="panel-body">
 
-        <form role="form" novalidate [ngFormModel]="form" (submit)="submit($event)" id="set-new-password-form">
+        <form role="form" novalidate id="set-new-password-form"
+              [ngFormModel]="form" (submit)="submit($event)" *ngIf="!newPasswordSet">
 
           <div class="alert alert-danger" *ngIf="!validRequest" style="margin-bottom:0;">
             Invalid request
@@ -85,6 +86,14 @@
           </div>
 
         </form>
+        <div id=""
+             *ngIf="newPasswordSet">
+
+          <div class="alert alert-success">
+            Your new password is set! Redirecting you to loginpage..
+          </div>
+
+        </div>
       </div>
     </div>
   </div>
