--- a/src/app/set-new-password/setNewPassword.html
+++ b/src/app/set-new-password/setNewPassword.html
@@ -4,14 +4,14 @@
       <div class="panel-heading">
         <h3 class="panel-title"><strong>Set new password</strong></h3>
         <div>
-          <a [routerLink]=" ['Login']" id="set-new-password-login-link">Login?</a>
+          <a [routerLink]=" ['/login']" id="set-new-password-login-link">Login?</a>
         </div>
       </div>
 
       <div class="panel-body">
 
         <form role="form" novalidate id="set-new-password-form"
-              [ngFormModel]="form" (submit)="submit($event)" *ngIf="!newPasswordSet">
+              [formGroup]="form" (submit)="submit($event)" *ngIf="!newPasswordSet">
 
           <div class="alert alert-danger" *ngIf="!validRequest" style="margin-bottom:0;">
             Invalid request
@@ -28,7 +28,7 @@
                 <input id="set-new-password-password" type="password" class="form-control" name="password"
                        placeholder="Your new password"
                        required
-                       ngControl="password">
+                       formControlName="password">
               </div>
 
               <div class="error-group" *ngIf="( submitted && !form.controls.password.valid )">
@@ -52,7 +52,7 @@
                 <input id="set-new-password-repeat-password" type="password" class="form-control" name="repeatPassword"
                        placeholder="Repeat your new password"
                        required
-                       ngControl="repeatPassword">
+                       formControlName="repeatPassword">
               </div>
 
               <div class="error-group"
@@ -78,7 +78,7 @@
 
             <div>
               Don't have an account?
-              <a [routerLink]=" ['/Register']" id="set-new-password-register-link">
+              <a [routerLink]=" ['/register']" id="set-new-password-register-link">
                 Register here
               </a>
             </div>
