Fixed review remarks

--- a/src/app/forgot-password/forgotPassword.html
+++ b/src/app/forgot-password/forgotPassword.html
@@ -33,7 +33,7 @@
                 Your email is required
               </span>
               <span class="help-block"
-                    *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('validEmail')">
+                    *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('invalidEmail')">
                 Your email is invalid
               </span>
             </div>
