updated first test scenario without cucumberjs

--- a/src/app/forgot-password/forgotPassword.component.html
+++ b/src/app/forgot-password/forgotPassword.component.html
@@ -1,69 +1,72 @@
 <div class="container" id="forgot-password-container">
-  <div class="col-md-4 col-md-offset-4">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title"><strong>Forgot password</strong></h3>
-        <div>
-          <a [routerLink]=" ['/login']" id="forgot-password-login-link">Login?</a>
-        </div>
-      </div>
-
-      <div class="panel-body">
-        <form role="form" novalidate id="forgot-password-form"
-              [formGroup]="form" (submit)="submit($event)" *ngIf="!validSubmit">
-
-          <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.email.valid )}">
-
-            <div class="input-group">
-              <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-              <input
-                id="forgot-password-email"
-                type="text"
-                class="form-control"
-                name="email"
-                value=""
-                placeholder="Your email"
-                formControlName="email"
-                required
-              >
+    <div class="col-md-4 col-md-offset-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title" id="forgot-password-title">
+                    Forgot password
+                </h3>
+                <div>
+                    <a [routerLink]=" ['/login']" id="forgot-password-login-link">Login?</a>
+                </div>
             </div>
 
-            <div class="error-group" *ngIf="( submitted && !form.controls.email.valid )">
+            <div class="panel-body">
+                <form role="form" novalidate id="forgot-password-form"
+                      [formGroup]="form" (submit)="submit($event)" *ngIf="!validSubmit">
+
+                    <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.email.valid )}">
+
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
+                            <input
+                                    id="forgot-password-email"
+                                    type="text"
+                                    class="form-control"
+                                    name="email"
+                                    value=""
+                                    placeholder="Your email"
+                                    formControlName="email"
+                                    required
+                            >
+                        </div>
+
+                        <div class="error-group" *ngIf="( submitted && !form.controls.email.valid )">
               <span class="help-block" *ngIf="form.controls.email.hasError('required')">
                 Your email is required
               </span>
-              <span class="help-block"
-                    *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('invalidEmail')">
+                            <span class="help-block"
+                                  *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('invalidEmail')">
                 Your email is invalid
               </span>
+                        </div>
+
+                    </div>
+
+                    <button type="submit" class="btn btn-success" id="forgot-password-submit">Request new password
+                    </button>
+
+                    <hr/>
+
+                    <div class="form-group" style="margin-bottom:0;">
+
+                        <div style="font-size:85%">
+                            Don't have an account?
+                            <a [routerLink]=" ['/register']" id="forgot-password-register-link">
+                                Register here
+                            </a>
+                        </div>
+
+                    </div>
+                </form>
+                <div id=""
+                     *ngIf="validSubmit">
+
+                    <div class="alert alert-success">
+                        Email with further instructions send!
+                    </div>
+
+                </div>
             </div>
-
-          </div>
-
-          <button type="submit" class="btn btn-success" id="forgot-password-submit">Request new password</button>
-
-          <hr/>
-
-          <div class="form-group" style="margin-bottom:0;">
-
-            <div style="font-size:85%">
-              Don't have an account?
-              <a [routerLink]=" ['/register']" id="forgot-password-register-link">
-                Register here
-              </a>
-            </div>
-
-          </div>
-        </form>
-        <div id=""
-             *ngIf="validSubmit">
-
-          <div class="alert alert-success">
-            Email with further instructions send!
-          </div>
-
         </div>
-      </div>
     </div>
-  </div>
 </div>
