--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,7 +2,9 @@
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title"><strong>Register</strong></h3>
+        <h3 class="panel-title"  id="forgot-password-title">
+          Register
+        </h3>
         <div>
           <a [routerLink]=" ['/forgot-password']" id="register-forgot-password-link">Forgot password?</a>
         </div>
