--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,82 +1,86 @@
 <div class="container" id="login-container">
-  <div class="col-md-4 col-md-offset-4">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title"><strong>Login</strong></h3>
-        <div>
-          <a [routerLink]=" ['/forgot-password']" id="login-forgot-password-link">Forgot password?</a>
-        </div>
-      </div>
-
-      <div class="panel-body">
-
-        <form role="form" novalidate id="login-form"
-              [formGroup]="form" (submit)="submit($event)"
-              *ngIf="!authenticated">
-
-          <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.email.valid )}">
-            <div class="input-group">
-              <label class="input-group-addon" for="login-email"><i class="glyphicon glyphicon-envelope"></i></label>
-              <input id="login-email" type="text" class="form-control" name="login-email"
-                     placeholder="Your email"
-                     required
-                     formControlName="email">
+    <div class="col-md-4 col-md-offset-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title" id="login-title">
+                    Login
+                </h3>
+                <div>
+                    <a [routerLink]=" ['/forgot-password']" id="login-forgot-password-link">Forgot password?</a>
+                </div>
             </div>
 
-            <div class="error-group" *ngIf="( submitted && !form.controls.email.valid )">
+            <div class="panel-body">
+
+                <form role="form" novalidate id="login-form"
+                      [formGroup]="form" (submit)="submit($event)"
+                      *ngIf="!authenticated">
+
+                    <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.email.valid )}">
+                        <div class="input-group">
+                            <label class="input-group-addon" for="login-email"><i
+                                    class="glyphicon glyphicon-envelope"></i></label>
+                            <input id="login-email" type="text" class="form-control" name="login-email"
+                                   placeholder="Your email"
+                                   required
+                                   formControlName="email">
+                        </div>
+
+                        <div class="error-group" *ngIf="( submitted && !form.controls.email.valid )">
               <span class="help-block" *ngIf="form.controls.email.hasError('required')">
                 Your email is required
               </span>
-              <span class="help-block"
-                    *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('invalidEmail')">
+                            <span class="help-block"
+                                  *ngIf="!form.controls.email.hasError('required') && form.controls.email.hasError('invalidEmail')">
                 Your email is invalid
               </span>
-            </div>
+                        </div>
 
-          </div>
+                    </div>
 
-          <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.password.valid )}">
+                    <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.password.valid )}">
 
-            <div class="input-group">
-              <label class="input-group-addon" for="login-password"><i class="glyphicon glyphicon-lock"></i></label>
-              <input id="login-password" type="password" class="form-control" name="login-password"
-                     placeholder="Your password"
-                     required
-                     formControlName="password">
-            </div>
+                        <div class="input-group">
+                            <label class="input-group-addon" for="login-password"><i
+                                    class="glyphicon glyphicon-lock"></i></label>
+                            <input id="login-password" type="password" class="form-control" name="login-password"
+                                   placeholder="Your password"
+                                   required
+                                   formControlName="password">
+                        </div>
 
-            <div class="error-group" *ngIf="( submitted && !form.controls.password.valid )">
+                        <div class="error-group" *ngIf="( submitted && !form.controls.password.valid )">
               <span class="help-block" *ngIf="form.controls.password.hasError('required')">
                 Your password is required
               </span>
+                        </div>
+
+                    </div>
+
+                    <button type="submit" class="btn btn-success" id="login-submit">Login</button>
+
+                    <hr/>
+
+                    <div class="form-group">
+
+                        <div>
+                            Don't have an account?
+                            <a [routerLink]=" ['/register']" id="login-register-link">
+                                Register here
+                            </a>
+                        </div>
+
+                    </div>
+                </form>
+                <div id=""
+                     *ngIf="authenticated">
+
+                    <div class="alert alert-success">
+                        You are logged in!
+                    </div>
+
+                </div>
             </div>
-
-          </div>
-
-          <button type="submit" class="btn btn-success" id="login-submit">Login</button>
-
-          <hr/>
-
-          <div class="form-group">
-
-            <div>
-              Don't have an account?
-              <a [routerLink]=" ['/register']" id="login-register-link">
-                Register here
-              </a>
-            </div>
-
-          </div>
-        </form>
-        <div id=""
-             *ngIf="authenticated">
-
-          <div class="alert alert-success">
-            You are logged in!
-          </div>
-
         </div>
-      </div>
     </div>
-  </div>
 </div>
