--- a/src/app/set-new-password/setNewPassword.component.html
+++ b/src/app/set-new-password/setNewPassword.component.html
@@ -2,7 +2,9 @@
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title"><strong>Set new password</strong></h3>
+        <h3 class="panel-title" id="set-new-password-title">
+          Set new password
+        </h3>
         <div>
           <a [routerLink]=" ['/login']" id="set-new-password-login-link">Login?</a>
         </div>
