implemented basic test cases

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -2,7 +2,7 @@
   <div class="col-md-4 col-md-offset-4">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title"  id="forgot-password-title">
+        <h3 class="panel-title"  id="register-title">
           Register
         </h3>
         <div>
