--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="container" id="login-container">
     <div class="col-md-4 col-md-offset-4">
+
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title" id="login-title">
@@ -82,5 +83,10 @@
                 </div>
             </div>
         </div>
+
+        <p id="startspeakerregistrationprocess">
+            <a [routerLink]=" ['/speaker-registration']">Register as speaker</a>
+        </p>
+
     </div>
 </div>
