--- a/src/app/speaker-registration/speaker-registration-step-one/speaker-registration-step-one.component.html
+++ b/src/app/speaker-registration/speaker-registration-step-one/speaker-registration-step-one.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-4 col-md-offset-4">
         <div class="panel panel-default">
             <div class="panel-heading">
-                <h3 class="panel-title" id="step-one-title">
+                <h3 class="panel-title" id="step-one-page-title">
                     Speaker registration - step 1/3
                 </h3>
             </div>
@@ -11,8 +11,8 @@
 
                 <div class="alert alert-info">
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vehicula enim ut hendrerit
-                        pharetra. Aliquam tempor eu quam at tempus. Sed non nunc at ligula tincidunt cursus ac eget velit.
+                        Welcome to the speaker registration section! In this first step you'll need to provide your
+                        personal details!
                     </p>
                 </div>
 
@@ -60,23 +60,23 @@
 
                     </div>
 
-                    <div class="form-group" [ngClass]="{'has-error': ( submitted && !form.controls.sessionType.valid )}">
+                    <div class="form-group"
+                         [ngClass]="{'has-error': ( submitted && !form.controls.description.valid )}">
 
                         <div class="input-group">
-                            <label class="input-group-addon" for="step-one-session-type"><i
-                                    class="glyphicon glyphicon-tag"></i></label>
-                            <select id="step-one-session-type" type="text" class="form-control" name="step-one-session-type"
-                                   required
-                                   formControlName="sessionType">
-                                <option value="">Select session type</option>
-                                <option value="speaker">Speaker</option>
-                                <option value="workshop">Workshop</option>
-                            </select>
+                            <label class="input-group-addon" for="step-one-description"><i
+                                    class="glyphicon glyphicon-align-justify"></i></label>
+                            <textarea id="step-one-description" class="form-control"
+                                      name="step-one-description"
+                                      placeholder="Speaker description"
+                                      required
+                                      rows="5"
+                                      formControlName="description"></textarea>
                         </div>
 
-                        <div class="error-group" *ngIf="( submitted && !form.controls.sessionType.valid )">
-                            <span class="help-block" *ngIf="form.controls.sessionType.hasError('required')">
-                                The session type is required
+                        <div class="error-group" *ngIf="( submitted && !form.controls.description.valid )">
+                            <span class="help-block" *ngIf="form.controls.description.hasError('required')">
+                                Your description is required
                             </span>
                         </div>
 
