--- a/src/app/speaker-registration/speaker-registration-step-three/speaker-registration-step-three.component.html
+++ b/src/app/speaker-registration/speaker-registration-step-three/speaker-registration-step-three.component.html
@@ -1,15 +1,71 @@
-<div class="container" id="register-container">
-  <div class="col-md-4 col-md-offset-4">
-    <div class="panel panel-default">
-      <div class="panel-heading">
-        <h3 class="panel-title" id="register-title">
-          Speaker registration - step 3/3
-        </h3>
-      </div>
+<div class="container" id="step-three-container">
+    <div class="col-md-4 col-md-offset-4">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title" id="step-three-page-title">
+                    Speaker registration - step 3/3
+                </h3>
+            </div>
 
-      <div class="panel-body">
+            <div class="panel-body">
 
-      </div>
+                <div class="alert alert-info">
+                    <p>
+                        Please verify your personal & speaker details!
+                    </p>
+                </div>
+
+                <form role="form" novalidate id="step-two-form"
+                      [formGroup]="form" (submit)="submit($event)">
+
+                    <h4>Personal details:</h4>
+
+                    <table>
+                        <tr>
+                            <th>Name:</th>
+                            <td>{{data.personal.name}}</td>
+                        </tr>
+                        <tr>
+                            <th>Email:</th>
+                            <td>{{data.personal.email}}</td>
+                        </tr>
+                        <tr>
+                            <th>Description:</th>
+                            <td>{{data.personal.description}}</td>
+                        </tr>
+                    </table>
+
+                    <button (click)="goBackToStepOne($event)" class="btn btn-warning" id="step-three-gobacktostepone">
+                        Edit personal details
+                    </button>
+
+                    <h4>Session details:</h4>
+
+                    <table>
+                        <tr>
+                            <th>Type:</th>
+                            <td>{{data.session.type}}</td>
+                        </tr>
+                        <tr>
+                            <th>Title:</th>
+                            <td>{{data.session.title}}</td>
+                        </tr>
+                        <tr>
+                            <th>Description:</th>
+                            <td>{{data.session.description}}</td>
+                        </tr>
+                    </table>
+
+
+                    <button (click)="goBackToStepTwo($event)" class="btn btn-warning" id="step-three-gobacktosteptwo">
+                        Edit session details
+                    </button>
+
+                    <button type="submit" class="btn btn-success" id="step-three-submit">Submit your session!</button>
+
+                </form>
+
+            </div>
+        </div>
     </div>
-  </div>
 </div>
