updated step3 & service

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -73,8 +73,7 @@
 
                     </div>
                 </form>
-                <div id=""
-                     *ngIf="authenticated">
+                <div *ngIf="authenticated">
 
                     <div class="alert alert-success">
                         You are logged in!
