--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -83,8 +83,8 @@
             </div>
         </div>
 
-        <p id="startspeakerregistrationprocess">
-            <a [routerLink]=" ['/speaker-registration']">Register as speaker</a>
+        <p class="center">
+            <a [routerLink]=" ['/speaker-registration']" id="startspeakerregistrationprocess">Register as speaker</a>
         </p>
 
     </div>
