--- a/src/app/speaker-registration/speaker-registration-step-one/speaker-registration-step-one.component.html
+++ b/src/app/speaker-registration/speaker-registration-step-one/speaker-registration-step-one.component.html
@@ -88,5 +88,8 @@
 
             </div>
         </div>
+        <p class="center">
+            <a [routerLink]=" ['/login']" id="gobacktologin">Back to login</a>
+        </p>
     </div>
 </div>
